syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "ConsultaChavePix";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup;

service ConsultaChavePixService {
  rpc consultaChave (ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

message Titular {
  string nome = 1;
  string cpf = 2;
}

message Conta {
  Titular titular = 1;
  string nomeInstituicao = 2;
  string agencia = 3;
  string numeroConta = 4;
  string tipoConta = 5;
}

message ConsultaChavePixRequest {
  int64 pixId = 1;
  string clientId = 2;
  string chavePix = 3;
}

message ConsultaChavePixResponse {
  int64 pixId = 1;
  string clientId = 2;
  string keyType = 3;
  string key = 4;
  Conta conta = 5;
  google.protobuf.Timestamp createdAt = 6;
}